[package]
name = "programming_bitcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
num-integer = "0.1.45"
num-traits = "0.2"
num-iter = "0.1.39"
lazy_static = "1.4.0"
num-bigint-dig = "0.7"