[package]
name = "programming_bitcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
rug = { version = "1.20", default-features = false, features = ["integer", "rand"]}
thiserror = "1.0.40"
